removed void js

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,15 +34,10 @@
     }
   </style>
 <script type="text/javascript">
-  function paramDisp(){
-    document.getElementById("yaldy").style.display = "block";;    
-  }
+
  $( document ).ready(function() {
-    // instantiating graph object
-    // var graphObject = new SvgGraph();
-    // // running graph methods TODO: Scheduler | conds satisfied
-    // graphObject.gen_graph();
-    console.log("END");
+
+    console.log("Loaded");
   });
   </script>
   <body>
